# FuncCraft

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE.txt  MANIFEST.in  README.md  compile.bat  compile.sh  funccraft.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheel.yaml
BenchmarkSuites/: default_suite.yaml
cmake/: FuncCraftConfig.cmake.in
docs/: funccraft.tex  ref.bib  requirements.txt
docs/scripts/: plot_coordinate_transform_sphere_3d.py
docs/source/: conf.py  construction.rst  index.rst  installation.rst  license.rst  mechanisms.rst  reproducibility.rst  suite_collections.rst  testing_ci.rst
docs/source/funccraft_cpp/: cppapi.rst  examples.rst  index.rst
docs/source/funccraft_py/: examples.rst  getting_started.rst  index.rst  pyapi.rst
examples/: Create_functions.ipynb  main_check_basicf_optima.cpp  main_check_optima.cpp  main_minimize.cpp  main_run_custom.cpp  main_run_experiments.cpp
funccraft/: __init__.py  benchmark_function.py  spec.py  suite.py
include/: basicf.h  benchmark.h  benchmark_function.h  builder.h  composition.h  coordinate_transforms.h  core.h  funccraft.h  function_spec.h  suite.h  suite_collection.h  suite_spec.h  value_transforms.h
pyfunccraft/: __init__.py  _funccraft.cp312-win_amd64.pyd  benchmark_function.py  function_spec.py  suite.py
scripts/: analyze_results.py  plot_results.py
src/: basicf.cpp  basicf.h  benchmark_function.cpp  bindings.cpp  builder.cpp  composition.cpp  coordinate_transforms.cpp  core.cpp  suite.cpp  suite_collection.cpp  support.cpp  support.h  value_transforms.cpp
suites/: 2026_v1.yaml
tests/: compare_values.py  main_test.cpp  test.py
